# study_projects

move/: Präsentation.key
move/webclient/: index.html
mpc_climate_control/: README.md  compute_X_LQR.m  compute_controller_base_parameters.m  controller_lqr.m  controller_mpc_1.m  controller_mpc_1_forces.m  controller_mpc_2.m  controller_mpc_3.m  controller_mpc_4.m  controller_mpc_5.m  inv_set.mat  mpc_1_forces.m  mpc_1_forces.mexmaci64  run_simulations.m  setup.m
mpc_climate_control/installation/: mac_fix.m
optimal_paparazzi/: ComputeStageCosts.m  ComputeTransitionProbabilities.m  LinearProgramming.m  PolicyIteration.asv  PolicyIteration.m  README.md  ValueIteration.m  comparison.txt  main.m
reliable_ai/: .gitignore  README.md  analyzer.py  exec.bash  exec_all_nets.bash  setup_gurobi.sh  test_ground_truth.bash
reliable_ai/beta/: analyzer_elina.py  (+6 more)
robot_judge/: .gitignore  README.md  setup.py
tailgait/: README.md  server.py
taxi_prediction/: .gitignore  README.md
taxi_prediction/map_prediction/: CMakeLists.txt  main.cpp  script.ipynb
taxi_prediction/map_prediction/include/: AStar_Search.h  CSVReader.h  Local_Search.h  OptimalTime_Search.h  Predictor.h  StreetMap.h  Utilities.h
taxi_prediction/map_prediction/src/: AStar_Search.cpp  CSVReader.cpp  Local_Search.cpp  OptimalTime_Search.cpp  Predictor.cpp  StreetMap.cpp  Utilites.cpp
taxi_prediction/map_prediction/tests/: a_star_test.cpp  measure_accuracy.cpp  optimise.cpp  vel_time_map_test.cpp
tetris_pros/: .gitignore  Player.java  README.md
vodom/: .gitignore  README.md  loadParameters.m  main.m
(+132 files in other folders)
